--- a/src/reclutamiento/ModificarCandidato.form
+++ b/src/reclutamiento/ModificarCandidato.form
@@ -71,7 +71,7 @@
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="jLabel13" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="choice_reclutadora" max="32767" attributes="0"/>
+                              <Component id="choice_reclutadora" pref="242" max="32767" attributes="0"/>
                           </Group>
                           <Component id="txt_observacion" alignment="0" max="32767" attributes="0"/>
                           <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
@@ -106,10 +106,15 @@
                                           <Component id="jLabel8" alignment="1" min="-2" max="-2" attributes="0"/>
                                           <Component id="jLabel10" alignment="1" min="-2" max="-2" attributes="0"/>
                                       </Group>
-                                      <EmptySpace max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="choice_seniority" max="32767" attributes="0"/>
-                                          <Component id="txt_rate" max="32767" attributes="0"/>
+                                          <Group type="102" attributes="0">
+                                              <EmptySpace max="-2" attributes="0"/>
+                                              <Component id="choice_seniority" max="32767" attributes="0"/>
+                                          </Group>
+                                          <Group type="102" attributes="0">
+                                              <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
+                                              <Component id="txt_rate" max="32767" attributes="0"/>
+                                          </Group>
                                       </Group>
                                   </Group>
                                   <Group type="102" alignment="0" attributes="0">
@@ -377,11 +382,11 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton4ActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JFormattedTextField" name="txt_telefono">
+    <Component class="javax.swing.JTextField" name="txt_telefono">
     </Component>
-    <Component class="javax.swing.JFormattedTextField" name="txt_rate">
+    <Component class="javax.swing.JTextField" name="txt_rate">
     </Component>
-    <Component class="javax.swing.JFormattedTextField" name="txt_fecha">
+    <Component class="javax.swing.JTextField" name="txt_fecha">
     </Component>
   </SubComponents>
 </Form>
